--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -103,9 +103,9 @@
                 </div>
 
                 <!-- Right Group: Secondary Controls (Pushed to the right on desktop) -->
-                <div class="is-flex gap-3 is-align-items-center is-justify-content-center-mobile is-flex-grow-1-mobile"
+                <div class="is-flex gap-2 is-align-items-center is-justify-content-center-mobile is-flex-grow-1-mobile"
                     style="margin-left: auto;">
-                    <div class="is-hidden-mobile">
+                    <div class="is-hidden-mobile mr-1">
                         <span class="is-size-7 opacity-50 font-mono" id="totalItemsCount">-- itens</span>
                     </div>
 
@@ -554,7 +554,7 @@
                                     <span class="status-dot ${statusDotClass}"></span>
                                     <span class="is-size-7 opacity-70 font-mono" title="Tamanho em disco">${game.size_formatted || '--'}</span>
                                 </div>
-                                <div class="is-flex gap-1 is-justify-content-end">
+                                <div class="is-flex gap-1 is-justify-content-end" style="margin-left: auto;">
                                     ${!game.has_latest_version && game.has_base ? '<span class="tag is-warning is-light is-small has-text-weight-bold" style="font-size: 0.6rem; height: 1.1rem; border: 1px solid rgba(255,193,7,0.3)">UPDATE</span>' : ''}
                                     ${!game.has_all_dlcs && game.has_base ? '<span class="tag is-warning is-light is-small has-text-weight-bold" style="font-size: 0.6rem; height: 1.1rem; border: 1px solid rgba(255,193,7,0.3)">DLC</span>' : ''}
                                     ${game.has_redundant_updates ? '<span class="tag is-danger is-light is-small has-text-weight-bold" style="font-size: 0.6rem; height: 1.1rem; border: 1px solid rgba(255,56,96,0.3)" title="Updates redundantes detectados">X-UPD</span>' : ''}
