--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -105,7 +105,7 @@
                 <!-- Right Group: Secondary Controls (Pushed to the right on desktop) -->
                 <div class="is-flex gap-2 is-align-items-center is-justify-content-center-mobile is-flex-grow-1-mobile"
                     style="margin-left: auto;">
-                    <div class="is-hidden-mobile mr-1">
+                    <div class="is-hidden-mobile mr-2">
                         <span class="is-size-7 opacity-50 font-mono" id="totalItemsCount">-- itens</span>
                     </div>
 
@@ -555,9 +555,9 @@
                                     <span class="is-size-7 opacity-70 font-mono" title="Tamanho em disco">${game.size_formatted || '--'}</span>
                                 </div>
                                 <div class="is-flex gap-1 is-justify-content-end" style="margin-left: auto;">
-                                    ${!game.has_latest_version && game.has_base ? '<span class="tag is-warning is-light is-small has-text-weight-bold" style="font-size: 0.6rem; height: 1.1rem; border: 1px solid rgba(255,193,7,0.3)">UPDATE</span>' : ''}
-                                    ${!game.has_all_dlcs && game.has_base ? '<span class="tag is-warning is-light is-small has-text-weight-bold" style="font-size: 0.6rem; height: 1.1rem; border: 1px solid rgba(255,193,7,0.3)">DLC</span>' : ''}
-                                    ${game.has_redundant_updates ? '<span class="tag is-danger is-light is-small has-text-weight-bold" style="font-size: 0.6rem; height: 1.1rem; border: 1px solid rgba(255,56,96,0.3)" title="Updates redundantes detectados">X-UPD</span>' : ''}
+                                    ${!game.has_latest_version && game.has_base ? '<span class="tag tag-update has-text-weight-bold">UPDATE</span>' : ''}
+                                    ${!game.has_all_dlcs && game.has_base ? '<span class="tag tag-dlc has-text-weight-bold">DLC</span>' : ''}
+                                    ${game.has_redundant_updates ? '<span class="tag tag-redundant has-text-weight-bold" title="Updates redundantes detectados">X-UPD</span>' : ''}
                                 </div>
                             </div>
                         </div>
@@ -618,7 +618,7 @@
                     <td class="p-1 has-text-centered"><img src="${game.iconUrl || '/static/img/no-icon.png'}" style="width: 32px; height: 32px; border-radius: 4px; object-fit: cover;"></td>
                     <td class="is-vcentered">
                         <strong class="is-size-7-mobile">${game.name || 'Unknown'}</strong>
-                        ${game.has_redundant_updates ? '<span class="tag is-danger is-light is-small ml-2 has-text-weight-bold" style="font-size: 0.6rem;">X-UPD</span>' : ''}
+                        ${game.has_redundant_updates ? '<span class="tag tag-redundant ml-2 has-text-weight-bold">X-UPD</span>' : ''}
                     </td>
                     <td class="font-mono is-size-7 is-vcentered">${game.id || game.title_id || '--'}</td>
                     <td class="is-vcentered has-text-centered"><span class="tag is-light is-small">v${game.display_version || '0'}</span></td>
@@ -646,6 +646,7 @@
                                     <p class="is-size-7 opacity-50 break-word" title="${f.filepath}">${f.filepath}</p>
                                 </div>
                                 <div class="column is-narrow ml-2 is-flex align-items-center">
+                                    <span class="tag is-info is-light font-mono mr-1">v${f.version || '0'}</span>
                                     <span class="tag is-light font-mono mr-2">${f.size_formatted || '--'}</span>
                                     <a href="/api/get_game/${f.id}" class="button is-primary is-small mr-1" title="Download">
                                         <span class="icon is-small"><i class="bi bi-download"></i></span>
@@ -686,7 +687,7 @@
                                 ${u.owned && file ? `
                                     <div class="field is-grouped is-grouped-centered is-align-items-center">
                                         <span class="tag is-light font-mono mr-2 is-hidden-mobile">${file.size_formatted || '--'}</span>
-                                        ${isRedundant ? '<span class="tag is-danger is-light is-small mr-1 has-text-weight-bold" style="font-size: 0.6rem;">REDUNDANTE</span>' : ''}
+                                        ${isRedundant ? '<span class="tag tag-redundant mr-1 has-text-weight-bold">REDUNDANTE</span>' : ''}
                                         <p class="control">
                                             <a href="/api/get_game/${file.id}" class="button is-primary is-small" title="Download">
                                                 <i class="bi bi-download"></i>
