Fix invalidate_library_cache NameError and include nav in wishlist

--- a/app/templates/wishlist.html
+++ b/app/templates/wishlist.html
@@ -3,6 +3,7 @@
 {% block title %}MyFoil - Wishlist{% endblock %}
 
 {% block content %}
+{% include 'nav.html' %}
 <div class="container pb-6 is-max-widescreen">
     <div class="section pt-5">
         <div class="level mb-4">
